--- a/breencf-portfolio/src/App.css
+++ b/breencf-portfolio/src/App.css
@@ -1,38 +1,99 @@
+* {
+  --green: #92de9f;
+  --red: #ff3049;
+  --gold: #fec518;
+  --forest: rgb(20, 130, 17);
+  text-transform: lowercase;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+li {
+  list-style-type: none;
+}
+
+#nav {
+  display: flex;
+  gap: 20px;
+}
+
+
+.background-cabbage{
+  height: 90vh;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 20%;
+  z-index: -1;
+}
+
+body {
+  background-color: var(--green);
+}
+
+h1 {
+  font-family: "Playfair Display", "Didot", "Georgia", "Times New Roman";
+  font-style: italic;
+  font-weight: 200;
+  font-size: 72px;
+  letter-spacing: -5px;
+  margin-bottom: 10px;
+}
+
+a {
   color: white;
+  text-decoration: none;
+  font-family: "Helvetica Neue", "Helvetica", "Futura", "sans-serif";
+  transition-duration: 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover, h1, #active-nav {
+  color: #ff3049;
+  padding: 0px;
+  border-bottom: 2px solid #FAD550;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1:hover {
+  color: white
+}
+
+.main {
+  width: 80%;
+  margin: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+.left {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.right {
+  width: 50%;
+}
+
+
+
+#profile {
+  height: 200px;
+  margin: 30px;
+  width: auto;
+  border-radius: 50%;
+  -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+  transition: all 0.2s ease;
+}
+
+#profile:hover{
+  -webkit-filter: grayscale(0%);
+        filter: grayscale(0%);
 }
